tdf#170295 no reduced range if look for empty cells

It solves tdf#170388 as well.
If a query is horizontal, then the range the user has specified in the
function is reduced to the columns, that are actually used in the
sheet. This 'actually used columns' is a global known value of the
sheet and need not be newly calculated for evaluating the function.

This behavior is meaningful for performance reasons, for not to
compare with cells known to be empty. But the query will return a
wrong value if it queries for empty cells and the query range covers
empty cells, that belong to columns that are not used.

The patch distinguishes now between looking for empty cells or not,
and reduces the range only in case of not looking for empty cells.

This solves the wrong results of XLOOKUP(;range;...), and
COUNTIF with criterion '=' and '<>'.

The patch does not fix tdf#159544 because the implementation of
COUNTIFS uses a different mechanism to reduce the query ranges.

Change-Id: I944072dbe6ecbbf47ea1c1f683ad3ec4930338b4
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/197703
Tested-by: Jenkins
Reviewed-by: Regina Henschel <rb.henschel@t-online.de>
(cherry picked from commit 4be8d9afe7ace4ef1289218edb92b9d422507c0f)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/197721
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
(cherry picked from commit 99c906812a5a27b440f4f4e90a2318303bf0bf9c)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/197801